--- a/Style.css
+++ b/Style.css
@@ -1,30 +1,41 @@
-h1
- {
-    background-color:rgb(64, 0, 255) ; 
-    color:yellow; 
-    text-align : center;
-}
-p
- {
-   background-color:rgb(0, 174, 137) ;
-   padding: 2px;
-   margin-right: 2px;
-   color: white;  
-}
-h5
-{
-   background-color:rgba(207, 216, 112, 0.89) ;
-   padding: 2px;
-   margin-right: 2px;
-   color: white;   
-}
-h6
-{
-   background-color:rgb(0, 200, 255);    
-}
 
-img{
-   background-image:url();
-}   
-
-
+h1{
+   font-family: Helvetica;
+   font-size: 100px;
+   font-weight: bold;
+   color: khaki;
+   text-align: center;
+   background-image: url('https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg)
+}
+.Brushes{
+   font-family: Helvetica;
+   font-size: 32px;
+   font-weight: bold;
+   background-color: mediumspringgreen;
+   color: white
+}
+.Frames{
+   font-family: Helvetica;
+   font-size: 32px;
+   font-weight: bold;
+   background-color: lightcoral;
+   color: white
+}
+.Paint{
+   font-family: Helvetica;
+   font-size: 32px;
+   font-weight: bold;
+   background-color: skyblue;
+   color: white;
+   }
+div{
+       color: white;
+       padding: 5px;
+   }
+p{
+   font-weight: bold;
+}
+mark{
+   background-color: white;
+   color: blue;
+}
